Adjustable preview pane in Clippings Sidebar (issue #511)
- Save preview pane height

--- a/wx-src/pages/sidebar.css
+++ b/wx-src/pages/sidebar.css
@@ -479,7 +479,6 @@ ul.fancytree-container {
     order: 3;
     flex: none;
     align-self: stretch;
-    height: 256px;
 }
 
 #preview-pane[type="folder"] {
